// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component renders correctly 1`] = `
<div>
  <header
    class="sc-bczRLJ eSXdNZ"
  >
    <h1
      class="sc-gsnTZi ijdOdb"
    >
      IP Address Tracker
    </h1>
    <form
      class="sc-dkzDqf ebTfFI"
      data-testid="search-form"
    >
      <input
        class="sc-hKMtZM iDhKft"
        placeholder="Search for any IP address or domain"
        type="text"
        value=""
      />
      <button
        class="sc-eCYdqJ bicgSB"
        type="submit"
      >
        <svg
          height="14"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m2 1 6 6-6 6"
            fill="none"
            stroke="#fff"
            stroke-width="3"
          />
        </svg>
      </button>
    </form>
    <section
      class="sc-gKXOVf urLmO"
      data-testid="info-card"
    >
      <div
        class="sc-iBkjds kPtZCg"
      >
        <h4
          class="sc-ftvSup gLiHex"
        >
          ip address
        </h4>
        <h3
          class="sc-papXJ fuZpkM"
        >
          111.111.111.111
        </h3>
      </div>
      <div
        class="sc-iBkjds kPtZCg"
      >
        <h4
          class="sc-ftvSup gLiHex"
        >
          location
        </h4>
        <h3
          class="sc-papXJ fuZpkM"
        >
          Uchikanda, JP 
        </h3>
      </div>
      <div
        class="sc-iBkjds kPtZCg"
      >
        <h4
          class="sc-ftvSup gLiHex"
        >
          timezone
        </h4>
        <h3
          class="sc-papXJ fuZpkM"
        >
          UTC
           
          +09:00
        </h3>
      </div>
      <div
        class="sc-iBkjds kPtZCg"
      >
        <h4
          class="sc-ftvSup gLiHex"
        >
          isp
        </h4>
        <h3
          class="sc-papXJ fuZpkM"
        >
          KDDI CORPORATION
        </h3>
      </div>
    </section>
  </header>
</div>
`;

exports[`Header component renders correctly with no data 1`] = `
<div>
  <header
    class="sc-bczRLJ eSXdNZ"
  >
    <h1
      class="sc-gsnTZi ijdOdb"
    >
      IP Address Tracker
    </h1>
    <form
      class="sc-dkzDqf ebTfFI"
      data-testid="search-form"
    >
      <input
        class="sc-hKMtZM iDhKft"
        placeholder="Search for any IP address or domain"
        type="text"
        value=""
      />
      <button
        class="sc-eCYdqJ bicgSB"
        type="submit"
      >
        <svg
          height="14"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m2 1 6 6-6 6"
            fill="none"
            stroke="#fff"
            stroke-width="3"
          />
        </svg>
      </button>
    </form>
  </header>
</div>
`;
